feat: add WebSerial

--- a/www/src/tsconfig.app.json
+++ b/www/src/tsconfig.app.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "types": ["w3c-web-usb"]
+    "types": ["w3c-web-usb", "w3c-web-serial"]
   },
   "exclude": [
     "src/test.ts",
