--- a/www/package.json
+++ b/www/package.json
@@ -49,7 +49,10 @@
     "@types/jasmine": "^3.5.7",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.7.7",
+    "@types/w3c-web-serial": "^1.0.3",
     "codelyzer": "^5.2.1",
+    "eslint": "^6.8.0",
+    "i": "^0.3.7",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
@@ -57,9 +60,9 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^3.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "npm": "^9.5.0",
     "protractor": "^6.0.0",
     "ts-node": "^8.6.2",
-    "eslint": "^6.8.0",
     "typescript": "3.7.5"
   }
 }
