--- a/server-kahoot-proxy/package.json
+++ b/server-kahoot-proxy/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.3.9",
     "@venixthedev/kahootjs": "^2.4.1",
+    "firebase": "^9.18.0",
+    "firebase-admin": "^11.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
