--- a/www2/package.json
+++ b/www2/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.5.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.0",
@@ -25,6 +26,7 @@
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "dns": "^0.2.2",
+    "firebase": "^9.18.0",
     "http2": "^3.3.7",
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
